--- a/object/show_hide/select_form.html
+++ b/object/show_hide/select_form.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
     <title>Javascript</title>
   </head>
@@ -21,17 +22,18 @@
 
     <div class="container m-5">
       <h1>Javascript</h1>
-      <p>Zobrazování a skrývání bloku s id="elementToShow" na základě změny checkboxu s name="input_checkbox".</p>
+      <p>Zobrazování a skrývání bloku s id="elementToShow" na základě hodnoty v selectu s name="input_select"</p>
 
-      <form name="checkboxForm">
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1" name="input_checkbox">
-          <label class="form-check-label" for="exampleCheck1">Zobrazit blok</label>
-        </div>
+      <form name="selectForm">
         <div class="form-group">
-          <label for="exampleInputEmail1">Text</label>
-          <input type="text" class="form-control" id="text" aria-describedby="textHelp" placeholder="Text">
-          <small id="emailHelp" class="form-text text-muted">Text ...</small>
+          <label for="exampleFormControlSelect1">Města</label>
+          <select class="form-control select2" id="exampleFormControlSelect1" name="input_select">
+            <option value="praha">Praha</option>
+            <option value="plzen">Plzeň</option>
+            <option value="ostrava">Ostrava</option>
+            <option value="brno">Brno</option>
+            <option value="liberec">Liberec</option>
+          </select>
         </div>
         <button type="submit" class="btn btn-primary">Odeslat</button>
       </form>
@@ -39,7 +41,7 @@
 
     <div class="container m-5" id="elementToShow">
       <div class="row bg-secondary display-3 p-5">
-        Tento blok se zobrazí jen když je checkbox zaškrtnutý
+        Tento blok se zobrazí, pokud je v selectu zvoleno město Plzeň
       </div>
     </div>
 
@@ -47,13 +49,21 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     
-    <script src="checkbox_form.js"></script>
+    <script src="select_form.js"></script>
     <script>
       /**
-       * Inicializace handleru initCheckboxForm objektu checkboxForm
+       * Inicializace select2
        */
-      checkboxForm.initCheckboxForm();
+      $(document).ready(function() {
+          $('.select2').select2();
+      });
+
+      /**
+       * Inicializace handleru pro selectForm
+       */
+      selectForm.initSelectForm();
     </script>
 
   </body>
